<resources>
    <string name="app_name">CarsData</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="large_text">
        "Material is the metaphor.\n\n"

    </string>
    <string name="unified_diagnostic_services">Unified Diagnostic Services</string>
    <string name="uds">UDS</string>
    <string name="uds_car">UDS car</string>
    <string name="ota_car">ota_car</string>
    <string name="over_the_air_updates">Over the Air Updates</string>
    <string name="ota">ota</string>
    <string name="PoC_2024">PoC 2024 ©</string>
    <string name="country_of_nmanufacturer">Country of\nmanufacturer</string>
    <string name="vehicle_type_n_or_division">Vehicle type\n or division</string>
    <string name="security_ncheck_digit">Security\ncheck digit</string>
    <string name="assembly_n_plant">Assembly\n plant</string>
    <string name="vehicle_nmanufacturer">Vehicle\nManufacturer</string>
    <string name="vehicle_brand_n_model_series">Vehicle brand/\n model series</string>
    <string name="model_n_year">Model \n year</string>
    <string name="vehicle_nproduction_no">Vehicle \nproduction no.</string>
<<<<<<< HEAD
<<<<<<< HEAD
    <string name="vin">1FTFW1R6XBFB08616</string>
=======
=======
>>>>>>> 79b55ebf360c9bc84dd23fbef5e73e46935844ae
    <string name="vin1">1</string>
    <string name="vin2">F</string>
    <string name="vin3">T</string>
    <string name="vin4">FW1R6</string>
    <string name="vin5">X</string>
    <string name="vin6">B</string>
    <string name="vin7">F</string>
    <string name="vin8">B08616</string>
<<<<<<< HEAD
>>>>>>> development
=======
>>>>>>> 79b55ebf360c9bc84dd23fbef5e73e46935844ae
    <string name="smooth_edges">smooth edges</string>
    <string name="your_car_details">Your car details:</string>
    <string name="info">info</string>
    <string name="more_info">More info</string>
    <string name="less_info">Less info</string>
<<<<<<< HEAD
<<<<<<< HEAD
=======
=======
>>>>>>> 79b55ebf360c9bc84dd23fbef5e73e46935844ae
    <string name="vinIm">vinIm</string>
    <string name="manual">Manual</string>
    <string name="automated">Semi-Automated</string>
    <string name="can_interface_control">CAN Interface Control</string>
    <string name="tester_present">Tester present</string>
    <string name="session">Session</string>
    <string name="read_current_access_timing">Read current access timing</string>
    <string name="go_to_docs">Go to Docs</string>
    <string name="ecu_to_reset">ECU to reset:</string>
    <string name="type_of_reset">Type of reset:</string>
    <string name="read_dtc">Read DTC</string>
    <string name="check_new_soft_version">Check new soft version</string>
    <string name="authentication">Authentication</string>
    <string name="read_identifiers">Read identifiers</string>
    <string name="request_ids">Request IDs</string>
    <string name="write_timing">Write Timing</string>
    <string name="response">Response</string>
    <string name="uds_services">UDS Services</string>
    <string name="ota_services">OTA Services</string>
    <string name="write_battery_param">Write battery param</string>
    <string name="read_info_engine">Read Info Engine</string>
    <string name="write_info_engine">Write Info Engine</string>
    <string name="read_info_doors">Read Info Doors</string>
    <string name="write_doors_info">Write Doors Info</string>
    <string name="read_battery_param">Read battery param</string>
    <string name="read_info_hvac">Read Info HVAC</string>
    <string name="write_info_hvac">Write Info HVAC</string>

<<<<<<< HEAD
>>>>>>> development
=======
>>>>>>> 79b55ebf360c9bc84dd23fbef5e73e46935844ae
</resources>