<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragments.Fragment_Update">
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="15dp"
            android:fillViewport="true">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/can_interface_control"
                android:textStyle="bold"
                android:textColor="@color/black"
                android:textSize="20sp"
                android:layout_marginTop="15dp"
                android:layout_marginStart="20dp"/>

            <GridLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:layout_marginTop="25dp"
                android:columnCount="2"
                android:rowCount="1"
                android:paddingHorizontal="15dp">
                <androidx.appcompat.widget.SwitchCompat
                    android:id="@id/tester"
                    android:layout_width="140dp"
                    android:layout_height="wrap_content"
                    android:text="@string/tester_present"/>
                <androidx.appcompat.widget.SwitchCompat
                    android:id="@id/change_session"
                    android:layout_width="105dp"
                    android:layout_height="wrap_content"
                    android:text="@string/session"/>
                <androidx.appcompat.widget.SwitchCompat
                    android:id="@id/read_access"
                    android:layout_width="225dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:text="@string/read_current_access_timing"/>
            </GridLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:paddingHorizontal="15dp">
                <Button
                    android:id="@+id/docs"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/go_to_docs"
                    android:textAllCaps="false"
                    android:backgroundTint="#03A9F4"
                    android:layout_marginTop="25dp"/>
                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:layout_marginTop="25dp"
                    android:layout_marginStart="25dp"
                    >
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/ecu_to_reset"
                        />
                    <Spinner
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:background="#03A9F4"/>
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:layout_marginTop="25dp"
                    android:layout_marginStart="25dp">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/type_of_reset" />
                    <Spinner
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:background="#03A9F4"/>
                </LinearLayout>
            </LinearLayout>

            <LinearLayout
                android:layout_marginTop="30dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/uds_services"
                    android:textColor="@color/black"
                    android:textSize="15sp"
                    android:layout_marginTop="30dp"
                    android:layout_marginStart="20dp"/>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="#56000000"
                    android:layout_marginHorizontal="15dp"/>
                <GridLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:columnCount="3"
                    android:rowCount="1"
                    android:layout_marginTop="10dp"
                    android:paddingHorizontal="15dp">
                    <Button
                        android:id="@+id/q1"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/read_dtc"
                        android:textAllCaps="false"
                        android:backgroundTint="#4CAF50"/>
                    <Button
                        android:id="@+id/q3"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/authentication"
                        android:textAllCaps="false"
                        android:backgroundTint="#FFC107"/>
                    <Button
                        android:id="@+id/q4"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/read_identifiers"
                        android:textAllCaps="false"
                        android:backgroundTint="#FFC107"/>
                    <Button
                        android:id="@+id/q5"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/request_ids"
                        android:textAllCaps="false"
                        android:backgroundTint="#03A9F4"/>
                    <Button
                        android:id="@+id/q6"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/write_timing"
                        android:textAllCaps="false"
                        android:backgroundTint="#03A9F4"/>

                </GridLayout>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/ota_services"
                    android:textColor="@color/black"
                    android:textSize="15sp"
                    android:layout_marginTop="30dp"
                    android:layout_marginStart="20dp"/>
                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="#56000000"
                    android:layout_marginHorizontal="15dp"/>
                <Button
                    android:id="@+id/q2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="15dp"
                    android:layout_marginTop="10dp"
                    android:text="@string/check_new_soft_version"
                    android:textAllCaps="false"
                    android:backgroundTint="#FFC107"/>

            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="#56000000"
                android:layout_marginTop="20dp"
                android:layout_marginHorizontal="15dp"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/response"
                android:textColor="@color/black"
                android:textSize="15sp"
                android:layout_marginTop="30dp"
                android:layout_marginStart="20dp"/>
            <TextView
                android:id="@id/response"
                android:layout_width="match_parent"
                android:layout_height="150dp"
                android:textColor="@color/black"
                android:textSize="15sp"
                android:background="@drawable/response_border"
                android:layout_marginTop="30dp"
                android:layout_marginEnd="20dp"
                android:layout_marginStart="20dp"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginTop="50dp"
                android:text="@string/PoC_2024"/>
        </LinearLayout>

    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>