<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="false"
    tools:context=".AccessibilityFragment">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent" >
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/UDS_example_image"
                android:layout_width="match_parent"
                android:layout_height="348dp"
                android:alpha="0.7"
                android:contentDescription="@string/uds_car"
                android:cropToPadding="false"
                android:scaleType ="fitXY"
                android:src="@drawable/uds" />

            <ImageView
                android:id="@+id/OTA_example_image"
                android:layout_width="match_parent"
                android:layout_height="412dp"
                android:alpha="0.7"
                android:contentDescription="@string/ota_car"
                android:cropToPadding="false"
                android:scaleType="centerCrop"
                android:src="@drawable/ota1" />

        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:elevation="2dp">
            <TextView
                android:id="@+id/UDS_header_text"
                style="@android:style/TextAppearance.Material.Widget.TextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="36dp"
                android:layout_marginTop="16dp"
                android:alpha="1"
                android:singleLine="false"
                android:soundEffectsEnabled="true"
                android:text="@string/unified_diagnostic_services"
                android:textAllCaps="false"
                android:textColor="@color/black"
                android:textColorHighlight="#000000"
                android:textColorHint="#040202"
                android:textColorLink="#000000"
                android:textIsSelectable="false"
                android:textSize="35sp"
                android:textStyle="bold"
                android:visibility="visible" />

            <Button
                android:id="@+id/UDS_action_button"
                android:layout_width="138dp"
                android:layout_height="48dp"
                android:layout_marginStart="36dp"
                android:layout_marginTop="150dp"
                android:background="@drawable/rounded_button"
                android:drawableStart="@drawable/gear"
                android:drawablePadding="8dp"
                android:text="@string/uds"
                android:textSize="25sp"
                android:visibility="visible" />

            <TextView
                android:id="@+id/OTA_header_text"
                style="@android:style/TextAppearance.Material.Widget.TextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="36dp"
                android:layout_marginTop="70dp"
                android:alpha="1"
                android:singleLine="false"
                android:soundEffectsEnabled="true"
                android:text="@string/over_the_air_updates"
                android:textAllCaps="false"
                android:textColor="@color/black"
                android:textColorHighlight="#000000"
                android:textColorHint="#040202"
                android:textColorLink="#000000"
                android:textIsSelectable="false"
                android:textSize="35sp"
                android:textStyle="bold"
                android:visibility="visible" />

            <Button
                android:id="@+id/OTA_action_button"
                android:layout_width="138dp"
                android:layout_height="48dp"
                android:layout_marginStart="36dp"
                android:layout_marginTop="210dp"
                android:background="@drawable/rounded_button"
                android:drawableStart="@drawable/gear"
                android:drawablePadding="8dp"
                android:text="@string/ota"
                android:textSize="25sp"
                android:visibility="visible" />

            <TextView
                android:id="@+id/poc_claimer"
                style="@android:style/TextAppearance.Material.Widget.TextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="60dp"
                android:alpha="1"
                android:singleLine="false"
                android:soundEffectsEnabled="true"
                android:text="@string/PoC_2024"
                android:textAllCaps="false"
                android:textColor="#D3D3D3"
                android:textColorHighlight="#000000"
                android:textColorHint="#040202"
                android:textColorLink="#000000"
                android:textIsSelectable="false"
                android:textSize="14sp"
                android:textStyle="bold"
                android:visibility="visible" />
        </LinearLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>


    </ScrollView>

</androidx.coordinatorlayout.widget.CoordinatorLayout>